Minor refactoring
Signed-off-by: Stefan Marr <git@stefan-marr.de>